Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriTextRetinteger.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
