Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetBooleanFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
